# sample-aws-boto3

./: .gitignore  README.md
athena-prepared-statements/: .gitignore  README.md  env.sh  pyproject.toml  query_create_prepared.py  query_w_prepared.py  query_wo_prepared.py
ecs-volume/: .terraform.lock.hcl  ecs-service-def.json  ecs-task-def.json  ecs_ebs.tf  ecspresso.yml  main.tf
