[tool.poetry]
name = "athena-prepared-statements"
version = "0.1.0"
description = ""
authors = ["thaim <thaim24@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.101"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
